# nanotero

./: .gitignore  CHANGELOG-ES.md  CHANGELOG.MD  CONTRIBUTING.md  Cargo.toml  LICENSE  README-ES.md  README.md  STANDARD.md
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/src/lex/: mod.rs  src.rs  token.rs
crates/compiler/src/parser/: error.rs  mod.rs  text_format.rs
crates/compiler/tests/: lexer.rs  parser.rs  src.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs
crates/lex/src/ast/: mod.rs
crates/lex/src/lexer/: mod.rs  string.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/parser/: error.rs  mod.rs  text_format.rs
crates/parser/src/values/: mod.rs
src/: error.rs  lib.rs
tests/: automatic.rs
