[package]
name = "nanotero"
version = "0.1.1"
edition = "2024"
authors = ["GabyDev0"]
description = "An ultra-fast, lightweight parser for the Tero configuration format."
license = "MIT"
readme = "README.md"
repository = "https://github.com/GabyDev0/nanotero"
homepage = "https://github.com/GabyDev0/nanotero"
keywords = ["parser", "config", "tero", "json-alternative"]
categories = ["parser-implementations", "config"]

[dependencies]
nanotero-compiler = { workspace = true }
nanotero-macro = {version = "0.1.0", path = "crates/macro"}
thiserror = "2.0.18"
[workspace.dependencies]
wide = "1.5.0"
num-traits = "0.2.19"
nanotero-compiler = {version = "0.1.0", path = "crates/compiler"}

[workspace]
members = ["crates/compiler", "crates/macro"]