[package]
name = "nanotero-compiler"
version = "0.1.0"
edition = "2024"
authors = ["GabyDev0"]
description = "Compiler designed for the nanotero crate"
license = "MIT"
repository = "https://github.com/GabyDev0/nanotero"
homepage = "https://github.com/GabyDev0/nanotero"

[dependencies]
wide = { workspace = true }
num-traits = { workspace = true }