[package]
name = "nanotero-lex"
version = "0.1.0"
edition = "2024"
authors = ["GabyDev0"]
description = "Lexer diseñado para el crate nanotero"
license = "MIT"
readme = "README.md"
repository = "https://github.com/GabyDev0/nanotero"
homepage = "https://github.com/GabyDev0/nanotero"

[dependencies]
wide = { workspace = true }