[package]
name = "nanotero-parser"
version = "0.1.0"
edition = "2024"
authors = ["GabyDev0"]
description = "Parser diseñado para el crate nanotero"
license = "MIT"
readme = "README.md"
repository = "https://github.com/GabyDev0/nanotero"
homepage = "https://github.com/GabyDev0/nanotero"

[dependencies]
nanotero-lex = { workspace = true}